...
        NavigationStack {
            Form {
                Section(header: Text("Book cover")){
                    ImagePicker(image: $viewModel.coverUI)
                }
                Section("Book Details") {
                    TextField("Title of the book", text: $viewModel.title)
                    TextField("Author", text: $viewModel.author)
                    Picker("Genre", selection: $viewModel.genre){
                        ForEach(Genre.allCases, id: \.self) { genre in
                            Text(genre.rawValue).tag(genre)
                        }
                    }
...
                        .frame(height: 150)
                }
            }
            .navigationTitle(viewModel.navigationTitle)
            .toolbar{
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        viewModel.saveBook()
                        dismiss()
                    }.disabled(viewModel.isNotSavable)
                }
                ToolbarItem(placement: .cancellationAction) {
                    Button("Cancel") {
...
